...
                        <viewControllerLayoutGuide type="bottom" id="0GR-jG-zU0"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Xew-7a-HSL">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OFo-Av-Wc4">
                                <rect key="frame" x="116" y="109" width="368" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="367" id="RBg-fc-Fte"/>
                                    <constraint firstAttribute="height" constant="30" id="VtT-kp-fZo"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="RBg-fc-Fte"/>
                                    </mask>
                                </variation>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ASe-tE-1W0">
                                <rect key="frame" x="116" y="146" width="368" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="VIo-7D-eoS"/>
                                    <constraint firstAttribute="width" constant="367" id="yJX-wl-ur8"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="yJX-wl-ur8"/>
                                    </mask>
                                </variation>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repeat password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1G6-NI-C1S">
                                <rect key="frame" x="116" y="184" width="368" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="9GV-Td-maK"/>
                                    <constraint firstAttribute="width" constant="367" id="OxD-0G-c13"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="0.0" y="113.5" width="600" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gGC-eA-oSC" id="fYv-6K-5dE">
                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type Destination" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YnU-NI-kr5">
                                            <rect key="frame" x="106" y="7" width="486" height="30"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="30" id="v7F-gP-bfL"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
...
                                                <constraint firstAttribute="height" constant="21" id="mGB-X8-8RY"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type a comment" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yip-UC-C93">
                                            <rect key="frame" x="106" y="7" width="486" height="30"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="30" id="QOm-aA-phS"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
...
